docs/api/qiskit/0.35/qiskit.qobj.QasmQobjConfig.mdx
---
title: QasmQobjConfig (v0.35)
description: API reference for qiskit.qobj.QasmQobjConfig in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmQobjConfig
---

# QasmQobjConfig

<Class id="qiskit.qobj.QasmQobjConfig" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/qobj/qasm_qobj.py" signature="QasmQobjConfig(shots=None, max_credits=None, seed_simulator=None, memory=None, parameter_binds=None, meas_level=None, meas_return=None, memory_slots=None, n_qubits=None, pulse_library=None, calibrations=None, rep_delay=None, qubit_lo_freq=None, meas_lo_freq=None, **kwargs)" modifiers="class">
  Bases: `types.SimpleNamespace`

  A configuration for a QASM Qobj.

  Model for RunConfig.

  **Parameters**

  *   **shots** (*int*) – the number of shots.
  *   **max\_credits** (*int*) – DEPRECATED This parameter is deprecated as of Qiskit Terra 0.20.0, and will be removed in a future release. This parameter has no effect on modern IBM Quantum systems, and no alternative is necessary.
  *   **seed\_simulator** (*int*) – the seed to use in the simulator
  *   **memory** (*bool*) – whether to request memory from backend (per-shot readouts)
  *   **parameter\_binds** (*list\[dict]*) – List of parameter bindings
  *   **meas\_level** (*int*) – Measurement level 0, 1, or 2
  *   **meas\_return** (*str*) – For measurement level \< 2, whether single or avg shots are returned
  *   **memory\_slots** (*int*) – The number of memory slots on the device
  *   **n\_qubits** (*int*) – The number of qubits on the device
  *   **pulse\_library** (*list*) – List of [`PulseLibraryItem`](qiskit.qobj.PulseLibraryItem "qiskit.qobj.PulseLibraryItem").
  *   **calibrations** ([*QasmExperimentCalibrations*](qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")) – Information required for Pulse gates.
  *   **rep\_delay** (*float*) – Delay between programs in sec. Only supported on certain backends (`backend.configuration().dynamic_reprate_enabled` ). Must be from the range supplied by the backend (`backend.configuration().rep_delay_range`). Default is `backend.configuration().default_rep_delay`.
  *   **qubit\_lo\_freq** (*list*) – List of frequencies (as floats) for the qubit driver LO’s in GHz.
  *   **meas\_lo\_freq** (*list*) – List of frequencies (as floats) for the measurement driver LO’s in GHz.
  *   **kwargs** – Additional free form key value fields to add to the configuration.

  ## Methods

  <span id="qiskit-qobj-qasmqobjconfig-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.QasmQobjConfig.from_dict" signature="QasmQobjConfig.from_dict(data)" modifiers="classmethod">
    Create a new QasmQobjConfig object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QasmQobjConfig](qiskit.qobj.QasmQobjConfig "qiskit.qobj.QasmQobjConfig")
  </Function>

  <span id="qiskit-qobj-qasmqobjconfig-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.QasmQobjConfig.to_dict" signature="QasmQobjConfig.to_dict()">
    Return a dictionary format representation of the QASM Qobj config.

    **Returns**

    The dictionary form of the QasmQobjConfig.

    **Return type**

    dict
  </Function>
</Class>

